--- a/public/index.html
+++ b/public/index.html
@@ -43,11 +43,13 @@
     -->
   </body>
   <script>
-(function() {
+(async function() {
   var url = new URLSearchParams(window.location.hash.substring(1))
   var apiToken = url.get("birdAuth")
   
-  if (apiToken) {
+  const apiTokenResponse = await fetch("https://localhost:5173/verify/"+apiToken);
+  
+  if (apiTokenResponse) {
     var toolbar = document.createElement('div');
     toolbar.id = 'userbird-toolbar';
     toolbar.style.position = 'fixed';
