--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   var url = new URLSearchParams(window.location.hash.substring(1))
   var apiToken = url.get("birdAuth")
   
-  const apiTokenResponse = await fetch("https://localhost:5173/verify/"+apiToken);
+  const apiTokenResponse = await fetch("https://0490-110-39-161-242.ngrok-free.app/verify/"+apiToken);
   
   if (apiTokenResponse) {
     var toolbar = document.createElement('div');
