--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
     svg.style.top = '0';
     svg.style.left = '0';
     svg.style.fill = '#fff';
-    svg.innerHTML = "<path d="M12 2C8.13 2 5 5.13 5 9C5 12.87 8.13 16 12 16C15.88 16 19 12.87 19 9C19 5.13 15.88 2 12 2M12 4C7.59 4 4 7.59 4 12C4 16.41 7.59 20 12 20C16.41 20 20 16.41 20 12C20 7.59 16.41 4 12 4Z" />"
+    svg.innerHTML = "<path d='M12 2C8.13 2 5 5.13 5 9C5 12.87 8.13 16 12 16C15.88 16 19 12.87 19 9C19 5.13 15.88 2 12 2M12 4C7.59 4 4 7.59 4 12C4 16.41 7.59 20 12 20C16.41 20 20 16.41 20 12C20 7.59 16.41 4 12 4Z' />"
     toolbar.appendChild(svg);
     toolbar.textContent = 'UserBird Toolbar Active';
     document.body.appendChild(toolbar);
