--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
         verificationStatus = "false";
       }
   
-  if (verificationStatus) {
+  if (apiToken && verificationStatus) {
     var toolbar = document.createElement('div');
     toolbar.id = 'userbird-toolbar';
     toolbar.style.position = 'fixed';
