--- a/public/index.html
+++ b/public/index.html
@@ -42,23 +42,27 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script>
+ <script>
 (async function() {
   var url = new URLSearchParams(window.location.hash.substring(1))
   var apiToken = url.get("birdAuth")
+  if(apiToken) {
   
-  const response = await fetch("https://0490-110-39-161-242.ngrok-free.app/verify/"+apiToken);
+  const response = await fetch("https://staging-api.userbird.com/api/profile/",{
+    method: 'GET',
+    headers: {
+        'Content-Type': 'application/json', 
+        Authorization: 'Bearer ' + apiToken
+      },
+    });
    var verificationStatus = false;
-   const parser = new DOMParser();
-      const doc = parser.parseFromString(response, 'text/html');
-      const status = doc.querySelector("#validity")?.textContent;
-      if (status === "valid") {
-        verificationStatus = "true";
-      } else {
-        verificationStatus = "false";
-      }
-  
-  if (apiToken && verificationStatus) {
+  if (response.ok) {
+    const data = await response.json();
+    verificationStatus = data.verified;
+  } else {
+    console.error("UserBird Redirection Unauthenticated.");
+  }
+  if (verificationStatus) {
     var toolbar = document.createElement('div');
     toolbar.id = 'userbird-toolbar';
     toolbar.style.position = 'fixed';
@@ -115,6 +119,7 @@
   } else {
     console.warn("UserBird Redirection Unauthenticated.");
   }
+    }
      
 
   window.staging_userbirdq = window.staging_userbirdq || [];
