--- a/public/index.html
+++ b/public/index.html
@@ -69,12 +69,7 @@
     toolbar.style.zIndex = '9999';
     toolbar.style.cursor = 'move';
 
-    var innerHtmlString = 
-                      <div style={"display:flex;justify-content:space-around;align-items:center;"}>
-                           <p> User Bird Logo</p>
-                           |
-                           <a href="http://localhost:5173/HRkSTkZF/site/eKBcpbcg" style="text-decoration:none;color:white;">Dashboard</a>
-                         </div>
+    var innerHtmlString = '<div style="display:flex;justify-content:space-around;align-items:center;"><p> User Bird Logo</p>|<a href="http://localhost:5173/HRkSTkZF/site/eKBcpbcg" style="text-decoration:none;color:white;">Dashboard</a></div>'
     toolbar.appendChild(innerHtmlString);
     document.body.appendChild(toolbar);
 
