--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
- <script>
+<script>
 (async function() {
   var url = new URLSearchParams(window.location.hash.substring(1))
   var apiToken = url.get("birdAuth")
-  if(apiToken && site_id && workspace_id) {
+  if(apiToken && true) {
   
   const response = await fetch("https://staging-api.userbird.com/api/profile/",{
     method: 'GET',
