--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
     toolbar.style.cursor = 'move';
 
     var innerHtmlString = '<div style="display:flex;justify-content:space-around;align-items:center;"><p> User Bird Logo</p>|<a href="http://localhost:5173/HRkSTkZF/site/eKBcpbcg" style="text-decoration:none;color:white;">Dashboard</a></div>'
-    toolbar.appendChild(innerHtmlString);
+    toolbar.innerHTML = innerHtmlString;
     document.body.appendChild(toolbar);
 
     toolbar.onmousedown = function(e) {
