--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
     toolbar.style.zIndex = '9999';
     toolbar.style.cursor = 'move';
 
-    var innerHtmlString = '<div style="display:flex;justify-content:space-around;align-items:center;"><svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" version="1.1" vheight="15" width="20" iewBox="0 0 421.39 96.87">
+    var innerHtmlString = `<div style="display:flex;justify-content:space-around;align-items:center;"><svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" version="1.1" vheight="15" width="20" iewBox="0 0 421.39 96.87">
   <defs>
     <style>
       .st0 {
@@ -104,7 +104,7 @@
     <path class="st3" d="M56.84,56.84h20.48c10.76,0,19.57-8.81,19.57-19.57v-20.48l-40.05,40.05Z"/>
     <path class="st1" d="M96.89,96.87v-20.47c0-10.76-8.81-19.57-19.57-19.57h-20.48l40.05,40.04Z"/>
   </g>
-</svg>|<a href="http://localhost:5173/HRkSTkZF/site/eKBcpbcg" style="text-decoration:none;color:white;">Dashboard</a></div>'
+</svg>|<a href="http://localhost:5173/HRkSTkZF/site/eKBcpbcg" style="text-decoration:none;color:white;">Dashboard</a></div>`
     toolbar.innerHTML = innerHtmlString;
     document.body.appendChild(toolbar);
 
