--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     -->
   </body>
 
-<script src="https://exquisite-seahorse-3a770e.netlify.app/index.js"></script>
+<script src="https://exquisite-seahorse-3a770e.netlify.app/dist/userbird-toolbar.es.js"></script>
 <script>
 const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
 toolbar.init();
