--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,9 @@
     -->
   </body>
 
-<script src="https://exquisite-seahorse-3a770e.netlify.app/dist/userbird-toolbar.es.js"></script>
+<script src="https://exquisite-seahorse-3a770e.netlify.app/dist/userbird-toolbar.umd.js"></script>
 <script>
-const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
+const toolbar = new window.UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
 toolbar.init();
 (function() {
   window.staging_userbirdq = window.staging_userbirdq || [];
