--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,8 @@
 
 <script src="https://exquisite-seahorse-3a770e.netlify.app/dist/userbird-toolbar.umd.js"></script>
 <script>
-const toolbar = new window.UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
+const {UserBirdToolbar} = window.UserBirdToolbar
+const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
 toolbar.init();
 (function() {
   window.staging_userbirdq = window.staging_userbirdq || [];
