--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@
 
 <script src="https://exquisite-seahorse-3a770e.netlify.app/dist/userbird-toolbar.umd.js"></script>
 <script>
+
+  console.log(window)
 const {UserBirdToolbar} = window.UserBirdToolbar
 const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
 toolbar.init();
