--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,17 @@
 
 <script src="https://exquisite-seahorse-3a770e.netlify.app/dist/userbird-toolbar.umd.js"></script>
 <script>
+window.addEventListener('message', (event) => {
+        if (event.origin !== 'http://localhost:3000') return; // Parent's origin
+        console.log('Iframe received:', event.data);
 
-  console.log(window)
+        // Respond to parent
+        event.source.postMessage(
+          { type: 'RESPONSE', text: 'Hello from iframe!' },
+          event.origin
+        );
+      });
+  
 const {UserBirdToolbar} = window.UserBirdToolbar
 const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
 toolbar.init();
