--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,9 @@
 
 <script src="https://exquisite-seahorse-3a770e.netlify.app/dist/userbird-toolbar.umd.js"></script>
 <script>
-window.addEventListener('message', (event) => {
+
+  (function(){
+    window.addEventListener('message', (event) => {
         alert(event.origin);
 
         // Respond to parent
@@ -54,19 +56,19 @@ window.addEventListener('message', (event) => {
           event.origin
         );
       });
-  
-const {UserBirdToolbar} = window.UserBirdToolbar
-const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
-toolbar.init();
-(function() {
-  window.staging_userbirdq = window.staging_userbirdq || [];
-  window.USERBIRD_SITE_ID = 'eKBcpbcg';
-  var script = document.createElement('script');
-  script.defer = true;
-  script.setAttribute('data-site', window.USERBIRD_SITE_ID);
-  script.src = "https://staging-cdn.userbird.com/analytics.min.js";
-  var currentScript = document.currentScript || document.getElementsByTagName('script')[0];
-  currentScript.parentNode.insertBefore(script, currentScript);
-})();
+  })()
+// const {UserBirdToolbar} = window.UserBirdToolbar
+// const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
+// toolbar.init();
+// (function() {
+//   window.staging_userbirdq = window.staging_userbirdq || [];
+//   window.USERBIRD_SITE_ID = 'eKBcpbcg';
+//   var script = document.createElement('script');
+//   script.defer = true;
+//   script.setAttribute('data-site', window.USERBIRD_SITE_ID);
+//   script.src = "https://staging-cdn.userbird.com/analytics.min.js";
+//   var currentScript = document.currentScript || document.getElementsByTagName('script')[0];
+//   currentScript.parentNode.insertBefore(script, currentScript);
+// })();
 </script>
 </html>
