--- a/public/index.html
+++ b/public/index.html
@@ -45,30 +45,29 @@
 
 <script src="https://exquisite-seahorse-3a770e.netlify.app/dist/userbird-toolbar.umd.js"></script>
 <script>
-
-  (function(){
-    window.addEventListener('message', (event) => {
-        alert(event.origin);
-
-        // Respond to parent
+  var authenticated = "";
+  window.addEventListener('message', (event) => {
+        if (event.origin !== 'http://localhost:5173') return; 
+        authenticated = event.data.text;
         event.source.postMessage(
-          { type: 'RESPONSE', text: 'Hello from iframe!' },
+          { type: 'RESPONSE', text: 'Authenticared!' },
           event.origin
         );
-      });
-  })()
-// const {UserBirdToolbar} = window.UserBirdToolbar
-// const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
-// toolbar.init();
-// (function() {
-//   window.staging_userbirdq = window.staging_userbirdq || [];
-//   window.USERBIRD_SITE_ID = 'eKBcpbcg';
-//   var script = document.createElement('script');
-//   script.defer = true;
-//   script.setAttribute('data-site', window.USERBIRD_SITE_ID);
-//   script.src = "https://staging-cdn.userbird.com/analytics.min.js";
-//   var currentScript = document.currentScript || document.getElementsByTagName('script')[0];
-//   currentScript.parentNode.insertBefore(script, currentScript);
-// })();
+      });    
+  
+const {UserBirdToolbar} = window.UserBirdToolbar
+const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
+toolbar.apiToken = authenticated;
+toolbar.init();
+(function() {
+  window.staging_userbirdq = window.staging_userbirdq || [];
+  window.USERBIRD_SITE_ID = 'eKBcpbcg';
+  var script = document.createElement('script');
+  script.defer = true;
+  script.setAttribute('data-site', window.USERBIRD_SITE_ID);
+  script.src = "https://staging-cdn.userbird.com/analytics.min.js";
+  var currentScript = document.currentScript || document.getElementsByTagName('script')[0];
+  currentScript.parentNode.insertBefore(script, currentScript);
+})();
 </script>
 </html>
