--- a/public/index.html
+++ b/public/index.html
@@ -46,14 +46,15 @@
 <script src="https://exquisite-seahorse-3a770e.netlify.app/dist/userbird-toolbar.umd.js"></script>
 <script>
   var authenticated = "";
-  window.addEventListener('message', (event) => {
+ (()  = > {window.addEventListener('message', (event) => {
         if (event.origin !== 'http://localhost:5173') return; 
         authenticated = event.data.text;
+        console.log(event.data);
         event.source.postMessage(
           { type: 'RESPONSE', text: 'Authenticared!' },
           event.origin
         );
-      });    
+      })})()    
   
 const {UserBirdToolbar} = window.UserBirdToolbar
 const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
