--- a/public/index.html
+++ b/public/index.html
@@ -52,24 +52,27 @@
      if (event.origin !== 'http://localhost:5173') return; 
      authenticated = JSON.parse(event.data).token;
      console.log(event.data);
+     cb();
      event.source.postMessage({ type: 'RESPONSE', text: 'Authenticared!' },event.origin);
       }
     )
   })();    
   
-const {UserBirdToolbar} = window.UserBirdToolbar
-const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
-toolbar.apiToken = authenticated;
-toolbar.init();
-(function() {
-  window.staging_userbirdq = window.staging_userbirdq || [];
-  window.USERBIRD_SITE_ID = 'eKBcpbcg';
-  var script = document.createElement('script');
-  script.defer = true;
-  script.setAttribute('data-site', window.USERBIRD_SITE_ID);
-  script.src = "https://staging-cdn.userbird.com/analytics.min.js";
-  var currentScript = document.currentScript || document.getElementsByTagName('script')[0];
-  currentScript.parentNode.insertBefore(script, currentScript);
-})();
+const cb = () => { 
+  const {UserBirdToolbar} = window.UserBirdToolbar
+  const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
+  toolbar.apiToken = authenticated;
+  toolbar.init();
+  (function() {
+    window.staging_userbirdq = window.staging_userbirdq || [];
+    window.USERBIRD_SITE_ID = 'eKBcpbcg';
+    var script = document.createElement('script');
+    script.defer = true;
+    script.setAttribute('data-site', window.USERBIRD_SITE_ID);
+    script.src = "https://staging-cdn.userbird.com/analytics.min.js";
+    var currentScript = document.currentScript || document.getElementsByTagName('script')[0];
+    currentScript.parentNode.insertBefore(script, currentScript);
+  })();
+}
 </script>
 </html>
