--- a/public/index.html
+++ b/public/index.html
@@ -45,23 +45,22 @@
 
 <script src="https://exquisite-seahorse-3a770e.netlify.app/dist/userbird-toolbar.umd.js"></script>
 <script>
-  var authenticated = "";
  (function() {
    window.addEventListener('message', 
   (event) => {
      if (event.origin !== 'http://localhost:5173') return; 
      authenticated = JSON.parse(event.data).token;
      console.log(event.data);
-     cb();
+     cb(authenticated);
      event.source.postMessage({ type: 'RESPONSE', text: 'Authenticared!' },event.origin);
       }
     )
   })();    
   
-const cb = () => { 
+const cb = (token) => { 
   const {UserBirdToolbar} = window.UserBirdToolbar
   const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
-  toolbar.apiToken = authenticated;
+  toolbar.apiToken = token;
   toolbar.init();
   try {
   (function() {
