--- a/public/index.html
+++ b/public/index.html
@@ -62,20 +62,20 @@ const cb = (token) => {
   const toolbar = new UserBirdToolbar({siteId: 'eKBcpbcg', workspaceId: 'HRkSTkZF'});
   toolbar.apiToken = token;
   toolbar.init();
-  try {
-  (function() {
-    window.staging_userbirdq = window.staging_userbirdq || [];
-    window.USERBIRD_SITE_ID = 'eKBcpbcg';
-    var script = document.createElement('script');
-    script.defer = true;
-    script.setAttribute('data-site', window.USERBIRD_SITE_ID);
-    script.src = "https://staging-cdn.userbird.com/analytics.min.js";
-    var currentScript = document.currentScript || document.getElementsByTagName('script')[0];
-    currentScript.parentNode.insertBefore(script, currentScript);
-  })();
-  }
-catch (error) {
-console.log(error)}
-}
+//   try {
+//   (function() {
+//     window.staging_userbirdq = window.staging_userbirdq || [];
+//     window.USERBIRD_SITE_ID = 'eKBcpbcg';
+//     var script = document.createElement('script');
+//     script.defer = true;
+//     script.setAttribute('data-site', window.USERBIRD_SITE_ID);
+//     script.src = "https://staging-cdn.userbird.com/analytics.min.js";
+//     var currentScript = document.currentScript || document.getElementsByTagName('script')[0];
+//     currentScript.parentNode.insertBefore(script, currentScript);
+//   })();
+//   }
+// catch (error) {
+// console.log(error)}
+// }
 </script>
 </html>
