--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
   toolbar.apiToken = token;
   toolbar.init();
   }
-  toolbar.bindEvent(this.window,cb)
+  toolbar.bindEvent(this.window,cb);
   
 
   (function() {
