--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,8 @@
 <script>  
 
   const {UserBirdToolbar} = window.UserBirdToolbar
-  const toolbar = new UserBirdToolbar();
-  toolbar.bindEvent(this.window);
+  const birdToolbar = new UserBirdToolbar();
+  birdToolbar.bindEvent(this.window);
   
 
   (function() {
