--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+    <link rel="stylesheet" href="https://exquisite-seahorse-3a770e.netlify.app/dist/toolbar-widget.css"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -41,15 +41,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
-
-<script src="https://exquisite-seahorse-3a770e.netlify.app/dist/userbird-toolbar.umd.js"></script>
+  </body> 
+<script src="https://inquisitive-cajeta-6826f3.netlify.app/analytics.min.js"></script>
 <script>  
-
-  const {UserBirdToolbar} = window.UserBirdToolbar
-  const birdToolbar = new UserBirdToolbar();
-  birdToolbar.bindEvent(this.window);
-  
 
   (function() {
     window.staging_userbirdq = window.staging_userbirdq || [];
