--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,20 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body> 
-<script src="https://inquisitive-cajeta-6826f3.netlify.app/analytics.min.js"></script>
+<script>
+(function () {
+      // Load the widget script dynamically
+      const script = document.createElement('script');
+      script.src = 'https://glistening-cascaron-17ffc8.netlify.app/widget/toolbar/toolbar-widget.iife.js'; // Your widget bundle
+      script.onload = function () {
+        // Call the widget init after it's loaded
+        if (window.ToolbarWidget) {
+          window.ToolbarWidget.createToolbar();
+        }
+      };
+      document.head.appendChild(script);
+    })();
+</script>
 <script>  
 
   (function() {
