--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://exquisite-seahorse-3a770e.netlify.app/dist/toolbar-widget.css"></script>
+    <link rel="stylesheet" href="https://staging.app.userbird.com/toolbar/style.css"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -46,7 +46,7 @@
 (function () {
       // Load the widget script dynamically
       const script = document.createElement('script');
-      script.src = 'https://glistening-cascaron-17ffc8.netlify.app/widget/toolbar/toolbar-widget.iife.js'; // Your widget bundle
+      script.src = 'https://staging.app.userbird.com/toolbar/toolbar-widget.iife.js'; // Your widget bundle
       script.onload = function () {
         // Call the widget init after it's loaded
         if (window.ToolbarWidget) {
