--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 (function () {
       // Load the widget script dynamically
       const script = document.createElement('script');
-      script.src = 'https://staging.app.userbird.com/toolbar/toolbar-widget.iife.js'; // Your widget bundle
+      script.src = 'https://staging-toolbar.userbird.com/toolbar-widget.iife.js'; // Your widget bundle
       script.onload = function () {
         // Call the widget init after it's loaded
         if (window.ToolbarWidget) {
